--- a/style.css
+++ b/style.css
@@ -2,5 +2,20 @@
 
 body {
     font-family:'Roboto', sans-serif;
-    font-size: 1rem;    
+    font-size: 1rem;
+    background-color: white;    
+}
+
+/* ------------------------------------------------Navbar */
+
+.custome-bg {
+    background-color:#0D0221;
+}
+
+.navbar-light .navbar-nav .nav-link,
+.navbar-light .navbar-nav .active>.nav-link,
+.navbar-light .navbar-brand,
+.navbar-light .navbar-toggler
+ {
+    color: white;
 }
