--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,20 @@ body {
     background-color: white;
 }
 
+/* ------------------------------------------Header Section */
+
+.aboutme {
+    text-align: left;
+}
+
+.hero-img {
+    float: right;
+    height: 300px;
+    width: 300px;
+    border: 2px solid #0D0221;
+    border-radius: 15px;
+}
+
 /* --------------------------------------------Footer */
 
 footer {
